[project]
name = "crewai-graph-data-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "baml-cli>=0.1.0",
    "crewai>=0.134.0",
    "crewai-tools[mcp]>=0.49.0",
    "fastapi[standard]>=0.115.14",
    "neo4j>=5.28.1",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
